<resources>
    <string name="app_name">Gerador de Grade Escolar</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua Senha?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nao_conta">Não tem uma conta?</string>
    <string name="criar_conta">Criar conta</string>
    <string name="tem_conta">Já tem uma conta?</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="campo_vazio">Preencha o campo</string>
    <string name="situacao">Situação</string>
    <string name="dia">Dia</string>
    <string name="horario_inicial">Horário Inicial</string>
    <string name="horario_final">Horário Final</string>
    <string name="salvar">Salvar</string>
    <string name="disciplina">Disciplina</string>
    <string name="cadastrar_disciplina">Cadastrar disciplina</string>
    <string name="remover">Remover</string>
    <string name="requisitos">Requisitos</string>
    <string name="acrescentar_requisito">Acrescentar Requisito</string>
    <string name="requisito">Requisito</string>
    <string name="selecionar_requisitos">Selecionar Requisitos</string>
    <string name="acrescenta_requisito">Acrescenta Requisito</string>
    <string name="confirma_requisito">Confirma Requisito</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adicionar">Adicionar</string>
    <string name="grade">Grade</string>
    <string name="gerar_grade">Gerar grade</string>
    <string name="sair">Sair</string>
    <string name="importar_disciplinas">Importar Disciplinas</string>
    <string name="importar_pr_requisitos">Importar Pré-Requisitos</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="n_s_lhe_enviaremos_um_link_de_redefini_o">Nós lhe enviaremos um link de redefinição</string>
    <string name="um_link_para_redefini_o_ser_enviado_no_seu_email">Um link para redefinição será enviado no seu email</string>
    <string name="voltar">Voltar</string>
    <string name="carregar_csv_disciplina">Carregar CSV Disciplina</string>
    <string name="carregar_csv_requisitos">Carregar CSV Requisitos</string>

    <string-array name="situacao">
        <item>Cursado</item>
        <item>À Cursar</item>
        <item>Em Curso</item>
    </string-array>

    <string-array name="dia">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
    </string-array>

    <string-array name="periodo">
        <item>Primeiro Período</item>
        <item>Segundo Período</item>
        <item>Todo Período</item>
    </string-array>

</resources>